fix(ui): Headbar does not overlap

--- a/kaeltebus-frontend/src/features/admin/AdminHome.scss
+++ b/kaeltebus-frontend/src/features/admin/AdminHome.scss
@@ -4,5 +4,9 @@
 }
 
 .UserMenu {
-    row-gap: 4px;
+    row-gap: 4px !important;
+}
+
+.BurgerMenu {
+    flex-wrap: nowrap !important;
 }
