--- a/kaeltebus-frontend/src/features/operator/OperatorHome.scss
+++ b/kaeltebus-frontend/src/features/operator/OperatorHome.scss
@@ -3,7 +3,10 @@
     flex-direction: column;
 }
 
-
 .UserMenu {
-    row-gap: 4px;
+    row-gap: 4px !important;
+}
+
+.BurgerMenu {
+    flex-wrap: nowrap !important;
 }
